--- a/app/views/covenants/_form.html.erb
+++ b/app/views/covenants/_form.html.erb
@@ -19,17 +19,12 @@
 
   <div class="field">
     <%= form.label :pdf %>
-    <%= form.file_field :urlMultimedia, id: :covenant_urlMultimedia %>
+    <%= form.file_field :pdf, id: :covenant_urlMultimedia %>
   </div>
 
   <div class="field">
     <%= form.label :discipleship_id %>
     <%= form.text_field :discipleship_id, id: :covenant_discipleship_id %>
-  </div>
-
-  <div class="field">
-    <%= form.label :user_id %>
-    <%= form.text_field :user_id, id: :covenant_user_id %>
   </div>
 
   <div class="actions">
@@ -68,11 +63,6 @@
   <div class="field">
     <%= form.label :discipleship_id %>
     <%= form.text_field :discipleship_id, id: :covenant_discipleship_id %>
-  </div>
-
-  <div class="field">
-    <%= form.label :student_id %>
-    <%= form.text_field :student_id, id: :covenant_student_id %>
   </div>
 
   <div class="actions">
