--- a/app/views/covenants/show.html.erb
+++ b/app/views/covenants/show.html.erb
@@ -18,7 +18,7 @@
       	</div>
       	 
       		
-				<%= link_to 'Descripcion',  @covenant.urlMultimedia_url , class: "green-text" %>
+				<%= link_to 'Descripcion',  @covenant.pdf_url , class: "green-text" %>
 
   		</div>
       <div class="row center-xs no-margin">
