--- a/app/views/discipleships/show.html.erb
+++ b/app/views/discipleships/show.html.erb
@@ -1,7 +1,7 @@
-<div class="row  middle-xs no-margin">    
+<div class="row  middle-xs no-margin">
   <div class="container">
     <div class="row center-xs" >
-      
+
         <div class="col-xs-12
                     col-sm-8
                     col-md-6
@@ -15,11 +15,11 @@
                 <b>Pacto asociado: </b><p>Pacto de compromiso</p>
                 <b>Descripcion del convenio: </b><p><%=@discipleship.descripcionPacto%></p>
                 <div class="actions center">
-                  <%= link_to  "Crear grupo", new_discipleship_group_path(@discipleship,@group), class: "waves-effect waves-teal btn-flat " %>                
-                  <%= link_to  "Volver", discipleships_path, class: "waves-effect waves-teal btn-flat " %>                
+                  <%= link_to  "Crear grupo", new_discipleship_group_path(@discipleship,@group), class: "waves-effect waves-teal btn-flat " %>
+                  <%= link_to  "Volver", discipleships_path, class: "waves-effect waves-teal btn-flat " %>
                   <%= link_to  "Editar", edit_discipleship_path, class: "waves-effect waves-teal btn-flat " %>
                   <%= link_to  "Eliminar", @discipleship, data: { confirm: 'Esta seguro?' },class: "waves-effect waves-teal btn-flat ", method: :delete %>
-                  
+
                 </div>
               </div>
             </div>
@@ -42,18 +42,18 @@
             <div class="box">
               <div class="card z-depth-3 borde-radio-10">
                 <div class="card-content black-text start-xs">
-                  <span class="card-title center"><%=grupo.nombre%></span>
+                  <span class="card-title center"><%=grupo.codigo%></span>
                   <b>Discipulado: </b><p><%=@discipleship.nombre%></p>
                   <b>Docente a cargo: </b><p><%= grupo.user.presence ? grupo.user.nombre_completo : "Sin docente asignado" %></p>
                   <b>Estudiantes inscritos: </b><p><%=Enroll.where(group_id: grupo.id).count %></p>
-                  
-                  
-                  
+
+
+
                 </div>
                 <section <%= grupo.activo? ? "class='verdeAdo white-text borde-radio-buton-10'".html_safe : 'class="grey borde-radio-buton-10"'.html_safe %> >
                     <div class="actions center ">
                   <%= link_to  "Ver detalles", group_path(grupo), class: "waves-effect waves-teal btn-flat white-text " %>
-                    
+
                   </div>
                   </section>
               </div>
@@ -61,8 +61,8 @@
         </div>
       <%end%>
     </div>
-    
-      
-   
-  </div>   
+
+
+
+  </div>
 </div>
