--- a/app/views/groups/index.html.erb
+++ b/app/views/groups/index.html.erb
@@ -14,10 +14,10 @@
     <% @groups.each do |group| %>
       <tr>
         <td><%= group.id %></td>
-        <td><%= group.nombre %></td>
+        <td><%= group.codigo %></td>
         <td><%= group.activo %></td>
         <td><%= group.discipleship.nombre %></td>
-        
+
         <td><%= group.user.presence ? group.user.nombre_completo : "Sin docente asignado" %></td>
         <td><%= link_to 'Show', discipleship_groups_path(group.discipleship,group) %></td>
         <td><%= link_to 'Edit', group_path(group) %></td>
@@ -28,5 +28,3 @@
 </table>
 
 <br>
-
-
