--- a/app/views/publications/index.html.erb
+++ b/app/views/publications/index.html.erb
@@ -1,7 +1,33 @@
-<p id="notice"><%= notice %></p>
+<div class="row center-xs">
+  <div class="col-xs-12 col-lg-6">
+    <div class="card borde-radio-8">
+      <div class="card-content" >
+        <section class="fondo">
+          <h4>Imagen de la publicacion</h4>
+        </section>
+        <span class="card-title verdeBri-text left-align" >Nombre de la publicacion</span>
+        <p class="left-align">Descripción detallada de la publicación, realizada por el administrador para que los usuarios visualicen contenido de interés en general para los feligreses de la comunidad cristiana integral</p>
+      </div>
 
-<h1>Publications</h1>
+    </div>
+  </div>
+</div>
+<% @publications.each do |publication| %>
+  <div class="row center-xs">
+    <div class="col-xs-12 col-lg-6">
+      <div class="card borde-radio-8">
+        <div class="card-content" >
+          <section class="fondo">
+            <h4>Imagen de la publicacion</h4>
+          </section>
+          <span class="card-title verdeBri-text left-align" >Nombre de la publicacion</span>
+          <p class="left-align">Descripción detallada de la publicación, realizada por el administrador para que los usuarios visualicen contenido de interés en general para los feligreses de la comunidad cristiana integral</p>
+        </div>
 
+      </div>
+    </div>
+  </div>
+<% end %>
 <table>
   <thead>
     <tr>
@@ -12,8 +38,23 @@
     </tr>
   </thead>
 
+
   <tbody>
     <% @publications.each do |publication| %>
+    <div class="row center-xs">
+      <div class="col-xs-12 col-lg-6">
+        <div class="card borde-radio-8">
+          <div class="card-content" >
+            <section class="fondo">
+              <h4>Imagen de la publicacion</h4>
+            </section>
+            <span class="card-title verdeBri-text left-align" >Nombre de la publicacion</span>
+            <p class="left-align">Descripción detallada de la publicación, realizada por el administrador para que los usuarios visualicen contenido de interés en general para los feligreses de la comunidad cristiana integral</p>
+          </div>
+
+        </div>
+      </div>
+    </div>
       <tr>
         <td><%= publication.descripcion %></td>
         <td><%= publication.material %></td>
@@ -27,5 +68,19 @@
 </table>
 
 <br>
-
+<div class="fixed-action-btn">
+  <a class="btn-floating btn-large red">
+    <i class="large material-icons">mode_edit</i>
+  </a>
+  <ul>
+    <li><a class="btn-floating red"><i class="material-icons">insert_chart</i></a></li>
+    <li><a class="btn-floating yellow darken-1"><i class="material-icons">format_quote</i></a></li>
+    <li><a class="btn-floating green"><i class="material-icons">publish</i></a></li>
+    <li><a href="/publications/new" class="btn-floating blue"><i class="material-icons">add</i></a></li>
+  </ul>
+</div>
 <%= link_to 'New Publication', new_publication_path %>
+
+<script>
+
+</script>
